refactor: refactor ReplicateStatus